# mcp

./: pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
scripts/: openai_smoke.py
servers/mcp-hello/: README.md  mcp.json  requirements.txt
servers/mcp-hello/src/: server.py
servers/mcp-hello/tests/: test_server.py
tests/: test_echo.py
