[project]
name = "mcp-project"
version = "0.1.0"
description = "MCP Learning Project."
authors = [
    { name = "Saswat Priyadarshan", email = "psaswat21@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "mypy>=1.14.1",
    "openai>=1.106.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "ruff>=0.12.12",
]
